Add upstart file for anbox session and add updating function to anbox-setup

--- a/debian/rules
+++ b/debian/rules
@@ -35,8 +35,11 @@ override_dh_install:
 	install -d $(CURDIR)/debian/tmp/etc/init
 	install -m 0644 data/ubuntu-touch-session/anbox-container.conf $(CURDIR)/debian/tmp/etc/init/anbox-container.conf
 
+	install -d $(CURDIR)/debian/tmp/usr/share/upstart/sessions
+	install -m 0644 data/ubuntu-touch-session/anbox-session.conf $(CURDIR)/debian/tmp/usr/share/upstart/sessions/anbox-session.conf
+
 	install -d $(CURDIR)/debian/tmp/usr/share/applications
-	install -m 0644 data/ubuntu-touch-session/anbox.desktop $(CURDIR)/debian/tmp/usr/share/anbox/anbox.desktop
+	install -m 0644 data/ubuntu-touch-session/anbox.desktop $(CURDIR)/debian/tmp/usr/share/applications/anbox.desktop
 
 	install -d $(CURDIR)/debian/tmp/usr/bin
 	install -m 0644 scripts/anbox-bridge.sh $(CURDIR)/debian/tmp/usr/bin/anbox-bridge
