Install desktop item for the Android Settings app

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -37,6 +37,10 @@ apps:
   collect-bug-info:
     command: bin/collect-bug-info.sh
 
+  app-settings:
+    command: desktop-launch $SNAP/bin/app-settings.sh
+    desktop: desktop/settings.desktop
+
 parts:
   android:
     plugin: dump
@@ -136,17 +140,20 @@ parts:
       container-manager.sh: bin/container-manager.sh
       anbox-bridge.sh: bin/anbox-bridge.sh
       collect-bug-info.sh: bin/collect-bug-info.sh
+      app-settings.sh: bin/app-settings.sh
     prime:
       - bin/anbox-bridge.sh
       - bin/anbox-wrapper.sh
       - bin/container-manager.sh
       - bin/collect-bug-info.sh
+      - bin/app-*.sh
 
   anbox-data:
     plugin: dump
     source: data
     prime:
       - glvnd
+      - desktop
 
   anbox:
     plugin: cmake
