--- a/external/backtrace-cpp/CMakeLists.txt
+++ b/external/backtrace-cpp/CMakeLists.txt
@@ -37,6 +37,9 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 endif()
 
+# ANBOX: allow old-style casts
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=old-style-cast")
+
 ###############################################################################
 # BACKWARD OBJECT
 ###############################################################################
