--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -65,12 +65,8 @@ parts:
 
         case "$ARCH" in
           x86_64)
-            IMAGE_PATH="2017/07/13"
-            IMAGE_NAME="android_3_amd64.img"
-            ;;
-          arm*)
-            IMAGE_PATH="2017/06/12"
-            IMAGE_NAME="android_1_armhf.img"
+            IMAGE_PATH="2018/05/23"
+            IMAGE_NAME="android_amd64.img"
             ;;
           *)
             echo "ERROR: Unknown architecture $ARCH"
