--- a/data/desktop/appmgr.desktop
+++ b/data/desktop/appmgr.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Anbox
-GenericName=Android in a box
+Name=Anbox Application Manager
+GenericName=Anbox Application Manager
 Version=1.0
 Type=Application
 Icon=${SNAP}/meta/gui/icon.png
