Limit snap architectures to amd64
We only support the snap for amd64 at the moment.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,6 +13,7 @@ description: |
   separate the Android system fully from the host.
 confinement: devmode
 grade: devel
+architectures: [amd64]
 
 slots:
   # Depending on in which environment we're running we either need
