Integrate cpu_features library to extend system-info output with CPU details

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ include_directories(
   ${CMAKE_SOURCE_DIR}/external/android-emugl/host/libs/renderControl_dec
   ${CMAKE_BINARY_DIR}/external/android-emugl/host/libs/renderControl_dec
   ${CMAKE_SOURCE_DIR}/external/glm
+  ${CMAKE_SOURCE_DIR}/external/cpu_features/include
 )
 
 protobuf_generate_cpp(
@@ -247,6 +248,7 @@ target_link_libraries(anbox-core
   ${MIRCLIENT_LIBRARIES}
   ${LIBSYSTEMD_LDFLAGS}
   ${LIBSYSTEMD_LIBRARIES}
+  cpu_features
   pthread
   process-cpp
   emugl_common
