external backward: allow old-style cast & unknown pragmas
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/external/backward-cpp/CMakeLists.txt
+++ b/external/backward-cpp/CMakeLists.txt
@@ -52,6 +52,9 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 endif()
 
+# Anbox: allow old-style cast, unknown pragmas
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=old-style-cast -Wno-error=unknown-pragmas")
+
 ###############################################################################
 # BACKWARD OBJECT
 ###############################################################################
