--- a/external/backward-cpp/CMakeLists.txt
+++ b/external/backward-cpp/CMakeLists.txt
@@ -53,7 +53,7 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
 endif()
 
 # Anbox: allow old-style cast, unknown pragmas
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=old-style-cast -Wno-error=unknown-pragmas")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=old-style-cast -Wno-error=unknown-pragmas -Wno-error=switch-default")
 
 ###############################################################################
 # BACKWARD OBJECT
