scripts: generate a zip instead of a tarball for our log archive
Github doesn't allow uploading a tarball but a zip archive.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -144,6 +144,13 @@ parts:
     stage-packages:
       - apparmor
 
+  zip:
+    plugin: nil
+    stage-packages:
+      - zip
+    prime:
+      - usr/bin/zip
+
   lxc:
     source: https://github.com/lxc/lxc
     source-type: git
