Change option var to ENABLE_MIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,8 @@ if (ANBOX_ENABLE_WAYLAND)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWAYLAND_SUPPORT")
 endif()
 
-option(ANBOX_ENABLE_MIR "Enable mir support" OFF)
-if (ANBOX_ENABLE_MIR)
+option(ENABLE_MIR "Enable mir support" OFF)
+if (ENABLE_MIR)
   pkg_check_modules(MIRCLIENT mirclient REQUIRED)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMIR_SUPPORT")
 endif()
