--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMESA_EGL_NO_X11_HEADERS")
 
-if(Protobuf_VERSION GREATER_EQUAL "3.7")
+if((Protobuf_VERSION GREATER "3.7") OR (Protobuf_VERSION EQUAL "3.7"))
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_PROTOBUF_CALLBACK_HEADER")
 endif()
 
