many: add support for binderfs
binderfs is a new in kernel filesystem which abstracts dynamic
allocation of binder devices and makes it suitable for in container
use. See https://www.kernel.org/doc/html/latest/admin-guide/binderfs.html
and https://brauner.github.io/2019/01/09/android-binderfs.html for more
details.

We use binderfs when available (starting with Ubuntu 19.04 and its
standard kernel) and otherwise fallback to the static /dev/binder if
available.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,10 @@ if (ENABLE_MIR)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMIR_SUPPORT")
 endif()
 
+if (NOT BINDERFS_PATH)
+  set(BINDERFS_PATH "/dev/binderfs")
+endif()
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DEGL_NO_X11")
 
 if((Protobuf_VERSION VERSION_GREATER "3.7") OR (Protobuf_VERSION VERSION_EQUAL "3.7"))
