--- a/android/init.goldfish.rc
+++ b/android/init.goldfish.rc
@@ -33,6 +33,9 @@ on boot
     setprop ro.hwui.text_large_cache_width 2048
     setprop ro.hwui.text_large_cache_height 1024
 
+# set the wpa interface name
+    setprop wifi.interface wlan0
+
 # disable some daemons the emulator doesn't want
     stop dund
     stop akmd
@@ -62,7 +65,7 @@ on boot
 # something else.
 
 on fs
-        mount_all /fstab.goldfish
+    mount_all /fstab.goldfish
 
 service goldfish-setup /system/etc/init.goldfish.sh
     user root
@@ -97,18 +100,12 @@ service goldfish-logcat /system/bin/logcat
 
 service fingerprintd /system/bin/fingerprintd
     class late_start
-    user system
-
-#Copy wpa_supplicant.conf to "data", because "etc" is read only
-on post-fs-data
-    copy /system/etc/wifi/wpa_supplicant.conf /data/misc/wifi/wpa_supplicant.conf
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
-    chown wifi wifi /data/misc/wifi/wpa_supplicant.conf
-    setprop wifi.interface "wlan0"
-    setprop wlan.driver.status "ok" 
+    user system 
 
 #Init the wpa_supplicant as Android private socket
-service wpa_supplicant /system/bin/wpa_supplicant -dt -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -Gwifi -g@android:wpa_wlan0
+#${wifi.wpa.driver} is set in init.goldfish.sh and originates
+#from the snap environment
+service wpa_supplicant /system/bin/wpa_supplicant -dt -D${wifi.wpa.driver} -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -Gwifi -g@android:wpa_wlan0
     group system wifi inet net_admin net_raw
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
