--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,10 +1,11 @@
 add_subdirectory(process-cpp-minimal)
 add_subdirectory(android-emugl)
 add_subdirectory(xdg)
-add_subdirectory(backward-cpp)
 
 set(BUILD_TESTING OFF)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error")
+add_subdirectory(backward-cpp)
 add_subdirectory(cpu_features)
 include(ExternalProject)
 ExternalProject_Add(sdbus-cpp
