--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(android-emugl)
 add_subdirectory(xdg)
 add_subdirectory(backward-cpp)
 add_subdirectory(cpu_features)
+SET(BUILD_CODE_GEN ON)
+add_subdirectory(sdbus-cpp)
