--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/cpu_features"]
 	path = external/cpu_features
 	url = https://github.com/google/cpu_features.git
+[submodule "external/sdbus-cpp"]
+	path = external/sdbus-cpp
+	url = https://github.com/Kistler-Group/sdbus-cpp.git
