--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,7 +1,9 @@
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ulinux")
 add_subdirectory(process-cpp-minimal)
 add_subdirectory(android-emugl)
 add_subdirectory(xdg)
 add_subdirectory(backward-cpp)
 add_subdirectory(cpu_features)
 SET(BUILD_CODE_GEN ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=old-style-cast -Wno-error=unused-variable")
 add_subdirectory(sdbus-cpp)
